Opened 15 years ago

Closed 14 years ago

#409 closed defect (fixed)

Musepack SV8 file decodes with distortions

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: mpc8
Cc: ami_stuff@o2.pl Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://bugzilla.mplayerhq.hu/show_bug.cgi?id=1965
The file at http://www.mediafire.com/?o9onbsm6dk6cqja decodes without errors, but the resulting wav file contains clicks and distortions.

$ ffmpeg -i 03.mpc out.wav
ffmpeg version N-32008-g13e9a0f, Copyright (c) 2000-2011 the FFmpeg developers
  built on Aug 20 2011 11:14:41 with gcc 4.5.3
  configuration: --cc='/usr/local/gcc-4.5.3/bin/gcc -m32'
  libavutil    51. 12. 0 / 51. 12. 0
  libavcodec   53. 11. 0 / 53. 11. 0
  libavformat  53.  9. 0 / 53.  9. 0
  libavdevice  53.  3. 0 / 53.  3. 0
  libavfilter   2. 32. 0 /  2. 32. 0
  libswscale    2.  0. 0 /  2.  0. 0
Input #0, mpc8, from '03.mpc':
  Duration: 00:12:20.62, start: 0.000000, bitrate: 262 kb/s
    Stream #0.0: Audio: mpc8, 44100 Hz, stereo, s16
Output #0, wav, to 'out.wav':
  Metadata:
    encoder         : Lavf53.9.0
    Stream #0.0: Audio: pcm_s16le, 44100 Hz, stereo, s16, 1411 kb/s
Stream mapping:
  Stream #0.0 -> #0.0
Press [q] to stop, [?] for help
Multiple frames in a packet from stream 0
size=  127760kB time=00:12:21.64 bitrate=1411.2kbits/s
video:0kB audio:127760kB global headers:0kB muxing overhead 0.000034%

I will attach the first 2MB of the testfile, the cut file allows to reproduce the problem with ffplay (first 40 seconds silence, >10 seconds music, all with distortions).

Attachments (2)

cut.mpc (2.0 MB ) - added by Carl Eugen Hoyos 15 years ago.
cut.flac (2.4 MB ) - added by Carl Eugen Hoyos 14 years ago.
First 32 seconds of the 68 seconds that cut.mpc is long

Change History (12)

by Carl Eugen Hoyos, 15 years ago

Attachment: cut.mpc added

comment:1 by reimar, 14 years ago

Could you confirm that decoding it with mpcdec results in "An error occured while decoding" and a 60 second wav file with only silence?
Because in that case it looks like the file is simply broken and FFmpeg does the best it can (though it would be better if it printed an error or so).

comment:2 by Carl Eugen Hoyos, 14 years ago

Both the complete sample from MPlayer bugzilla and the cut sample attached to this ticket decode fine with mpcdec v1.0.0 (the cut 68 sec sample shows an error because I cut it but the resulting wav file is not silent).
I will attach the first 32 seconds of the decoded wav file encoded as flac.

by Carl Eugen Hoyos, 14 years ago

Attachment: cut.flac added

First 32 seconds of the 68 seconds that cut.mpc is long

comment:3 by Carl Eugen Hoyos, 14 years ago

Status: newopen

comment:4 by reimar, 14 years ago

mpcdec cut.mpc cut.wav
with mpcdec from Debian unstable musepack-tools (0.1~r459-2, x86_64 version, libmpcdec6 has same version info) results in a 12MB wav file that contains only 0s.
The mpcdec -h output shows the version information as:
mpcdec - Musepack (MPC) decoder v1.0.0 (C) 2006-2009 MDT
Built Feb 15 2012 00:14:18

comment:6 by matusz, 14 years ago

revision 475 decodes the file with error:
mpcdec cut.mpc cut.wav
mpcdec - Musepack (MPC) decoder v1.0.0 (C) 2006-2009 MDT
Built Aug 18 2011 11:42:10
An error occured while decoding
3031583 samples decoded in 300 ms (229.14x)
but the wave file plays without problem (~11MB in size).

Maybe this will help:
http://bugzilla.mplayerhq.hu/show_bug.cgi?id=1965#c4

comment:7 by Carl Eugen Hoyos, 14 years ago

The attached sample cut.mpc still decodes with strong artefacts when using FFmpeg, decodes fine (except an error message because I cut the file) with mpcdec from http://files.musepack.net/linux/musepack_linux_2009_02_28.tar.gz

comment:8 by ami_stuff, 14 years ago

ffmpeg's decoder does not support correctly "--quality 8" (and 7, 9, 10) modes

6 and lower modes decodes ok

--quality 7 ("Insane")
--quality 8 ("BrainDead")
--quality 9 ("above BrainDead")
--quality 10 ("above BrainDead")

mpcenc --quality 8 file.wav out.mpc

http://www.datafilehost.com/download-e97beebb.html

comment:9 by ami_stuff, 14 years ago

Cc: ami_stuff@o2.pl added

comment:10 by Carl Eugen Hoyos, 14 years ago

Resolution: fixed
Status: openclosed

Fixed by Kostya.

Note: See TracTickets for help on using tickets.