Fix maxband limit when decoding mpc8.

Fixes yesterday's merge of Kostya's fix for ticket #409.